--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "typecheck": "tsc --noEmit -p tsconfig.app.json"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.17",
+    "@react-three/fiber": "^8.15.12",
     "@supabase/supabase-js": "^2.57.4",
+    "@types/three": "^0.160.0",
     "baseline-browser-mapping": "^2.9.3",
     "caniuse-lite": "^1.0.30001759",
     "firebase": "^12.6.0",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "three": "^0.160.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
