--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.11"
+    "nodemailer": "^7.0.11",
+    "resend": "^6.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
