--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "typecheck": "tsc --noEmit -p tsconfig.app.json"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "@supabase/supabase-js": "^2.57.4",
     "baseline-browser-mapping": "^2.9.3",
     "caniuse-lite": "^1.0.30001759",
     "firebase": "^12.6.0",
     "framer-motion": "^10.18.0",
+    "gsap": "^3.14.2",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
